force-app/main/default/objects/mkto_si__ScoringCache__c/mkto_si__ScoringCache__c.object-meta.xml
<CustomObject>
    <label>ScoringCache</label>
    <nameField>
        <label>ScoringCache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScoringCache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>