force-app/main/default/objects/mkto_si__ScoringCache__c/fields/mkto_si__OldValue__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__OldValue__c</fullName>
    <label>OldValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>