force-app/main/default/objects/mkto_si__ScoringCache__c/fields/mkto_si__Reason__c.field-meta.xml
<CustomField>
    <fullName>mkto_si__Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>